# pop-genome-checker

./: .gitignore  CLAUDE.md  LICENSE.md  README.md  pyproject.toml
src/pop_genome_checker/: assembly.py  cli.py  entrez.py  report.py  sra.py  taxonomy.py
tests/: test_assembly.py
